--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
     <section id="contact" style="background: #FFFFFF; text-align: center;">
         <h2>Ready to Manufacture in Australia?</h2>
+        <p>Contact us at <a href="mailto:info@ptbmanufacturing.com">info@ptbmanufacturing.com</a> or use the form below.</p>
         <a href="#contact" class="cta" style="border-color: #1A1A1A; color: #1A1A1A;">Book a Free Consultation</a>
         <form style="max-width: 600px; margin: 40px auto;">
             <input type="text" placeholder="Your Name" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
@@ -199,7 +200,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 PTB Manufacturing. All rights reserved. | Australian Beauty & Personal Care Product Manufacturers</p>
+        <p>&copy; 2025 PTB Manufacturing. All rights reserved. | Australian Beauty & Personal Care Product Manufacturers | Contact: <a href="mailto:info@ptbmanufacturing.com">info@ptbmanufacturing.com</a></p>
     </footer>
 </body>
 </html>
