--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="PTB Manufacturing is Australia's leading platform for developing, designing, and manufacturing beauty and personal care products. Our expert scientists craft cutting-edge formulations for your brand.">
     <meta name="keywords" content="beauty manufacturing Australia, personal care product manufacturing, Australian beauty product design, skincare formulation Australia, cosmetics manufacturing Sydney, beauty product prototyping, personal care development Melbourne">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://ptbmanufacturing.com/">
+    <link rel="canonical" href="https://ptbmanufacturing.com/au/">
     <!-- Open Graph for social sharing -->
     <meta property="og:title" content="PTB Manufacturing | Expert Beauty & Personal Care Manufacturing in Australia">
     <meta property="og:description" content="Develop and manufacture innovative beauty and personal care products with our Australian-based team of scientists and chemists.">
-    <meta property="og:url" content="https://ptbmanufacturing.com/">
+    <meta property="og:url" content="https://ptbmanufacturing.com/au/">
     <meta property="og:type" content="website">
     <!-- Schema.org structured data for SEO -->
     <script type="application/ld+json">
@@ -19,8 +19,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "PTB Manufacturing",
-      "url": "https://ptbmanufacturing.com/",
-      "logo": "https://ptbmanufacturing.com/logo.png",  // Replace with your logo URL
+      "url": "https://ptbmanufacturing.com/au/",
+      "logo": "https://ptbmanufacturing.com/au/logo.png",  // Replace with your logo URL
       "description": "Australian manufacturer specializing in beauty and personal care products, offering formulation, prototyping, and production services.",
       "address": {
         "@type": "PostalAddress",
@@ -191,10 +191,10 @@
         <h2>Ready to Manufacture in Australia?</h2>
         <p>Contact us at <a href="mailto:info@ptbmanufacturing.com">info@ptbmanufacturing.com</a> or use the form below.</p>
         <a href="#contact" class="cta" style="border-color: #1A1A1A; color: #1A1A1A;">Book a Free Consultation</a>
-        <form style="max-width: 600px; margin: 40px auto;">
-            <input type="text" placeholder="Your Name" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
-            <input type="email" placeholder="Your Email" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
-            <textarea placeholder="Your Beauty & Personal Care Vision..." rows="6" style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;"></textarea>
+        <form action="https://formspree.io/f/yourid" method="POST" style="max-width: 600px; margin: 40px auto;">
+            <input type="text" name="name" placeholder="Your Name" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
+            <input type="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
+            <textarea name="message" placeholder="Your Beauty & Personal Care Vision..." rows="6" style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;"></textarea>
             <button type="submit" class="cta" style="width: 100%; background: #1A1A1A; color: #FFFFFF; border: none;">Submit</button>
         </form>
     </section>
