--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <small style="color: #8B4513; font-weight: bold;">Limited Offer</small>
             <h2>The Simplest Way To Develop & Manufacture Beauty & Personal Care Products in Australia</h2>
             <p>PTB Manufacturing is Australia's premier platform for beauty and personal care product manufacturing. Develop, manufacture, and launch your next iconic product with our expert team.</p>
-            <a href="#contact" class="cta">Book A Free Consultation Now</a>
+            <a href="mailto:info@ptbmanufacturing.com?subject=Free Consultation Request&body=Please tell us about your project:" class="cta">Book A Free Consultation Now</a>
         </div>
         <div class="testimonial">
             <img src="https://media.istockphoto.com/id/1481971683/photo/portrait-of-businesswoman-in-office.jpg?s=612x612&w=0&k=20&c=7hlP5V9y4iHxGm37o2vOpB0vvu4OzD4xB71c5Q0Vv4A=" alt="Businesswoman testimonial for Australian beauty manufacturing">
@@ -110,7 +110,7 @@
     <section class="hero">
         <h1>Beauty & Personal Care, Forged by Science in Australia</h1>
         <p>Our Australian team of world-class scientists and chemists crafts cutting-edge formulations to bring your beauty and personal care vision to life.</p>
-        <a href="#contact" class="cta">Book a Free Consultation</a>
+        <a href="mailto:info@ptbmanufacturing.com?subject=Free Consultation Request&body=Please tell us about your project:" class="cta">Book a Free Consultation</a>
     </section>
 
     <section id="science">
@@ -190,7 +190,7 @@
     <section id="contact" style="background: #FFFFFF; text-align: center;">
         <h2>Ready to Manufacture in Australia?</h2>
         <p>Contact us at <a href="mailto:info@ptbmanufacturing.com">info@ptbmanufacturing.com</a> or use the form below.</p>
-        <a href="#contact" class="cta" style="border-color: #1A1A1A; color: #1A1A1A;">Book a Free Consultation</a>
+        <a href="mailto:info@ptbmanufacturing.com?subject=Free Consultation Request&body=Please tell us about your project:" class="cta">Book a Free Consultation</a>
         <form style="max-width: 600px; margin: 40px auto;">
             <input type="text" placeholder="Your Name" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
             <input type="email" placeholder="Your Email" required style="width: 100%; padding: 15px; margin: 10px 0; border: 1px solid #1A1A1A; border-radius: 10px;">
