--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;700&display=swap" rel="stylesheet"> <!-- Apple-like font -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif; margin: 0; padding: 0; line-height: 1.5; color: #1A1A1A; background-color: #FFFFFF; overflow-x: hidden; scroll-behavior: smooth; }
+        body { font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif; margin: 0; padding: 0; line-height: 1.5; color: #1A1A1A; background-color: #FFFFFF; overflow-x: hidden; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
         section { animation: fadeIn 1s ease-out; }
         header { background: #1A1A1A; color: #FFFFFF; padding: 20px; text-align: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -54,32 +54,25 @@
         .testimonial .stars { color: #FFD700; margin-bottom: 10px; }
         .testimonial cite { font-style: italic; color: #666; display: block; margin-top: 10px; }
         .hero { 
+            background: 
+                url('https://media.istockphoto.com/id/1225197485/photo/closeup-of-test-tubes-with-orange-or-blue-liquid-dropping-glass-with-an-orange-drop-above.jpg?s=1024x1024&w=is&k=20&c=vEPbhuAQ1l0uBmrENzOr8WnHiDAk5JwKqa6FIJzOIoc=') left center / 33.33% no-repeat,
+                url('https://thumbs.dreamstime.com/b/futuristic-laboratory-blue-neon-lighting-advanced-equipment-illuminated-lights-equipped-state-art-technology-ideal-329124361.jpg') center center / 33.33% no-repeat,
+                url('https://images.stockcake.com/public/8/0/2/8029e7e0-1c46-4b3a-bdd7-34427e5e4481_large/scientist-using-microscope-stockcake.jpg') right center / 33.33% no-repeat;
+            background-color: #e0e0e0; /* Fallback for blending */
+            height: 80vh; 
             display: flex; 
             flex-direction: column; 
-            align-items: center; 
             justify-content: center; 
-            height: 80vh; 
+            align-items: center; 
             text-align: center; 
             color: #FFFFFF; 
             text-shadow: 0 2px 4px rgba(0,0,0,0.5); 
             position: relative;
-            padding: 0 20px;
         }
-        .hero-image-container { 
-            display: flex; 
-            flex-direction: column; 
-            width: 100%; 
-            max-width: 1200px; 
-            gap: 20px; 
-        }
-        .hero-image { 
-            width: 100%; 
-            height: auto; 
-            object-fit: cover; 
-            border-radius: 10px; 
-        }
-        .hero h1 { font-size: 4em; font-weight: 700; margin: 0 0 10px; }
-        .hero p { font-size: 1.5em; max-width: 800px; margin: 0 0 20px; }
+        .hero::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.3); } /* Overlay for readability */
+        .hero h1 { font-size: 4em; font-weight: 700; margin: 0; z-index: 1; }
+        .hero p { font-size: 1.5em; max-width: 800px; z-index: 1; }
+        .hero .cta { z-index: 1; }
         .cta { background: transparent; border: 2px solid #FFD700; color: #FFD700; padding: 15px 40px; font-size: 1.2em; cursor: pointer; border-radius: 50px; text-decoration: none; transition: background 0.3s, color 0.3s; }
         .cta:hover { background: #FFD700; color: #1A1A1A; }
         section { padding: 80px 20px; max-width: 1200px; margin: 0 auto; }
@@ -87,11 +80,11 @@
         .steps, .solutions { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; }
         .step, .solution { background: #F5F5F5; padding: 40px; border-radius: 20px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); text-align: center; transition: transform 0.3s; }
         .step:hover, .solution:hover { transform: translateY(-10px); }
-        .step img, .solution img { width: 100%; border-radius: 10px; margin-bottom: 20px; object-fit: cover; height: auto; }
+        .step img, .solution img { width: 100%; border-radius: 10px; margin-bottom: 20px; }
         .testimonials { background: #1A1A1A; color: #FFFFFF; }
         .testimonial { background: rgba(255,255,255,0.05); padding: 30px; border-radius: 20px; margin-bottom: 30px; }
         footer { background: #1A1A1A; color: #FFFFFF; text-align: center; padding: 40px; }
-        @media (max-width: 768px) { .offer { flex-direction: column; text-align: center; } .offer-content, .testimonial { max-width: 100%; margin-bottom: 20px; } .hero h1 { font-size: 2.5em; } section { padding: 40px 20px; } .hero-image-container { gap: 10px; } }
+        @media (max-width: 768px) { .offer { flex-direction: column; text-align: center; } .offer-content, .testimonial { max-width: 100%; margin-bottom: 20px; } .hero h1 { font-size: 2.5em; } section { padding: 40px 20px; } .hero { background-size: cover; background-position: center; } /* Fallback for mobile */ }
     </style>
 </head>
 <body>
@@ -117,18 +110,12 @@
     <section class="hero">
         <h1>Beauty & Personal Care, Forged by Science in Australia</h1>
         <p>Our Australian team of world-class scientists and chemists crafts cutting-edge formulations to bring your beauty and personal care vision to life.</p>
-        <a href="mailto:info@ptbmanufacturing.com?subject=Free Consultation Request&body=Please tell us about your project:" class="cta">Book a Free Consultation</a>
-        <div class="hero-image-container">
-            <img class="hero-image" src="https://c8.alamy.com/comp/2BP1G9T/closeup-of-test-tubes-with-orange-or-blue-liquid-dropping-glass-with-an-orange-drop-above-testing-laboratory-sars-cov-2-test-chemical-testing-faci-2BP1G9T.jpg" alt="Closeup of test tubes with colorful liquids">
-            <img class="hero-image" src="https://thumbs.dreamstime.com/b/futuristic-laboratory-blue-neon-lighting-advanced-equipment-illuminated-lights-equipped-state-art-technology-ideal-329124361.jpg" alt="Futuristic laboratory interior with blue neon lighting">
-            <img class="hero-image" src="https://media.gettyimages.com/id/1181392325/photo/young-scientist-looking-through-a-microscope.jpg?s=612x612&w=gi&k=20&c=sQjHCdlsIGa0DRg1ZiY_NUwNm270k-VfKtfO3u2R4sM=" alt="Scientist using microscope in lab">
-        </div>
     </section>
 
     <section id="science">
         <h2>Powered by Australian Science & Manufacturing</h2>
         <p style="text-align: center; max-width: 800px; margin: 0 auto 60px; font-size: 1.2em;">At PTB Manufacturing, innovation starts in our state-of-the-art Australian labs. Our scientists use molecular engineering and clinical-grade testing to develop beauty and personal care formulas that deliver transformative results—safe, effective, and compliant with Australian standards.</p>
-        <img src="https://www.shutterstock.com/shutterstock/photos/1277420569/display_1500/stock-photo-female-scientist-portrait-doing-research-with-microscope-on-white-background-laboratory-science-1277420569.jpg" alt="Female researcher in beauty product lab" style="width: 100%; border-radius: 20px; margin-bottom: 40px;">
+        <img src="https://media.istockphoto.com/id/1347227608/photo/portrait-of-a-female-researcher-in-the-lab.jpg?s=612x612&w=0&k=20&c=0jY5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z=" alt="Female researcher in Australian beauty product lab" style="width: 100%; border-radius: 20px; margin-bottom: 40px;">
         <ul style="list-style: none; padding: 0; text-align: center; font-size: 1.1em;">
             <li>✓ Advanced Molecular Formulations for Beauty Products</li>
             <li>✓ Rigorous Stability Testing for Personal Care</li>
@@ -140,17 +127,17 @@
         <h2>The Australian Manufacturing Process</h2>
         <div class="steps">
             <div class="step">
-                <img src="https://media.gettyimages.com/id/483098985/photo/scientist-taking-a-sample-out-of-a-petri-dish-using-a-pipette.jpg?s=612x612&w=gi&k=20&c=KCBDX30WWrtzUaP4XmMC6A0Uql1k9HtncuCg0FWa1dY=" alt="Scientist pipetting in Australian beauty formulation lab">
+                <img src="https://media.istockphoto.com/id/1372498455/photo/scientist-pipetting-sample-in-petri-dish-for-study-in-microbiology-laboratory.jpg?s=612x612&w=0&k=20&c=0jY5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z=" alt="Scientist pipetting in Australian beauty formulation lab">
                 <h3>Formulation & Concept</h3>
                 <p>Our Australian scientists engineer unique beauty and personal care formulas, blending local innovation with your brand vision.</p>
             </div>
             <div class="step">
-                <img src="https://static.vecteezy.com/system/resources/previews/049/508/487/large_2x/a-vibrant-display-of-laboratory-glassware-filled-with-colorful-liquids-is-on-a-lab-table-with-an-active-lab-environment-in-the-background-showcasing-essential-scientific-equipment-for-experiments-photo.jpg" alt="Cosmetic research lab setup for personal care products in Australia">
+                <img src="https://media.istockphoto.com/id/1185087994/photo/cosmetic-research.jpg?s=612x612&w=0&k=20&c=0jY5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z5Z=" alt="Cosmetic research lab setup for personal care products in Australia">
                 <h3>Packaging & Design</h3>
                 <p>Precision-engineered packaging compliant with Australian regulations, designed for elegance and sustainability.</p>
             </div>
             <div class="step">
-                <img src="https://dwgyu36up6iuz.cloudfront.net/heru80fdn/image/upload/c_fill,d_placeholder_wired.png,fl_progressive,g_face,h_1080,q_80,w_1920/v1689366226/wired_wired-x-loreal-wired-brand-lab.jpg" alt="Beauty product prototyping in Australian manufacturing facility">
+                <img src="https://www.dior.com/on/demandware.static/-/Library-Sites-DiorSharedLibrary/default/dw46096c1e/images/beauty/Skincare/Autre/Research/recherche-4-946x533.jpg" alt="Beauty product prototyping in Australian manufacturing facility">
                 <h3>Prototyping & Testing</h3>
                 <p>Iterative prototypes tested in our Australian labs to ensure peak performance and TGA compliance.</p>
             </div>
